@startuml MainProgramModel
    !include DatabaseObjectModel.puml!1
    
    title Main application structure
    hide empty members
    remove IDao

    class WardrobeApplication{
        + {static} main()
    }

    note right
    MockDao and Application are instantiated
    in main(). Any controller that needs
    a reference to either of them gets it
    via their constructor 
    end note

    class Application{
        + <<Property>>Commands: Map<string, IController>
        - timer: Timer
        - timerRunning: bool
        + addController(string, IController)
        + runApplication()
        + quit()
        + startTimer()
        + stopTimer()
        - {static} sayHello()
    }

    WardrobeApplication o-- Application  
    WardrobeApplication o-- MockDao

@enduml